codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 10147
expression: terminal.backend().vt100().screen().contents()
---

                                                                                
  Would you like to make the following edits?                                   
                                                                                
  Reason: The model wants to apply changes                                      
                                                                                
  README.md (+2 -0)                                                             
                                                                                
    1 +hello                                                                    
    2 +world                                                                    
                                                                                
› 1. Yes, proceed (y)                                                           
  2. Yes, and don't ask again for these files (a)                               
  3. No, and tell Codex what to do differently (esc)                            
                                                                                
  Press enter to confirm or esc to cancel
